--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.1",
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "bootstrap": "^4.0.0",
-    "cross-env": "^5.1",
+    "cross-env": "^5.2.1",
     "flexslider": "^2.7.2",
     "icomoon": "^1.0.0",
-    "jquery": "^3.2",
-    "laravel-mix": "^4.0.7",
+    "jquery": "^3.4.1",
+    "laravel-mix": "^4.1.4",
     "laravel-mix-pug": "^0.3.0",
-    "popper.js": "^1.12",
-    "pug": "^2.0.3",
+    "laravel-mix-purgecss": "^4.2.0",
+    "popper.js": "^1.16.0",
+    "pug": "^2.0.4",
     "resolve-url-loader": "^2.3.1",
-    "sass": "^1.15.2",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.23.1",
+    "sass-loader": "^7.3.1",
     "slick-carousel": "^1.8.1",
     "vue-template-compiler": "^2.6.10",
     "webpack-rtl-plugin": "^2.0.0"
