use tailwindcss instead of bootstrap

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/manifest.js": "/js/manifest.js",
-    "/js/vendor.js": "/js/vendor.js",
-    "/about.html": "/about.html",
-    "/index.html": "/index.html"
+    "/css/app.css": "/css/app.css"
 }
