--- a/package.json
+++ b/package.json
@@ -1,34 +1,27 @@
 {
   "name": "frontend-scaffolding",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "The frontend scaffolding of our projects.",
   "private": true,
   "scripts": {
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "npm run development -- --watch",
     "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "bootstrap": "^4.0.0",
-    "cross-env": "^5.2.1",
-    "flexslider": "^2.7.2",
-    "icomoon": "^1.0.0",
-    "jquery": "^3.4.1",
-    "laravel-mix": "^4.1.4",
-    "laravel-mix-pug": "^0.3.0",
-    "laravel-mix-purgecss": "^4.2.0",
-    "popper.js": "^1.16.0",
-    "pug": "^2.0.4",
-    "resolve-url-loader": "^2.3.1",
-    "sass": "^1.23.1",
-    "sass-loader": "^7.3.1",
-    "slick-carousel": "^1.8.1",
-    "vue-template-compiler": "^2.6.10",
+    "autoprefixer": "^9.8.6",
+    "axios": "^0.19",
+    "cross-env": "^7.0",
+    "laravel-mix": "^5.0.1",
+    "lodash": "^4.17.19",
+    "resolve-url-loader": "^3.1.0",
+    "tailwindcss": "^1.9.6",
+    "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12",
     "webpack-rtl-plugin": "^2.0.0"
   }
 }
