--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "live-server ./public"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^9.8.6",
     "axios": "^0.19",
     "cross-env": "^7.0",
@@ -21,7 +22,8 @@
     "live-server": "^1.2.1",
     "lodash": "^4.17.19",
     "resolve-url-loader": "^3.1.0",
-    "tailwindcss": "^1.9.6",
+    "postcss-import": "^12.0.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12",
     "webpack-rtl-plugin": "^2.0.0"
