--- a/package.json
+++ b/package.json
@@ -5,27 +5,28 @@
   "private": true,
   "scripts": {
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "mix --production",
     "start": "live-server ./public"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.2.1",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.1.0",
     "axios": "^0.19",
-    "cross-env": "^7.0",
-    "laravel-mix": "^5.0.1",
+    "laravel-mix": "^6.0.6",
     "live-server": "^1.2.1",
     "lodash": "^4.17.19",
-    "resolve-url-loader": "^3.1.0",
+    "postcss": "^8.2.2",
     "postcss-import": "^12.0.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
+    "resolve-url-loader": "^3.1.0",
     "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
-    "webpack-rtl-plugin": "^2.0.0"
+    "webpack-rtl-plugin": "^2.0.0",
+    "tailwindcss": "^2.0.2"
   }
 }
