--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "postcss": "^8.2.2",
     "postcss-import": "^12.0.1",
     "resolve-url-loader": "^3.1.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.1.0",
+    "tailwindcss": "^2.0.2",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
-    "webpack-rtl-plugin": "^2.0.0",
-    "tailwindcss": "^2.0.2"
+    "webpack-rtl-plugin": "^2.0.0"
   }
 }
