--- a/package.json
+++ b/package.json
@@ -14,21 +14,12 @@
     "start": "live-server ./public"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.2.1",
-    "autoprefixer": "^10.1.0",
-    "axios": "^0.19",
+    "bootstrap": "^5.0.0-beta3",
     "laravel-mix": "^6.0.6",
     "live-server": "^1.2.1",
-    "lodash": "^4.17.19",
-    "postcss": "^8.2.2",
-    "postcss-import": "^12.0.1",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.32.0",
     "sass-loader": "^10.1.0",
-    "tailwindcss": "^2.0.2",
-    "vue": "^2.6.12",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12",
     "webpack-rtl-plugin": "^2.0.0"
   }
 }
